@@ -230,7 +230,9 @@ void i_silc_operation_command_reply(SilcClient client,
 			client_id = va_arg(va, SilcClientID *);
 
 			if( !i_silc_client_id_is_me(silc_gwconn, client_id) ) {
-				/* this shouldn't happen */
+				if( silc_gwconn->connected == FALSE )
+					gateway_connection_set_logged_in(
+							gwconn);
 				return;
 			}
 
@@ -256,13 +258,13 @@ void i_silc_operation_connected(SilcClient client, SilcClientConnection conn,
 		i_silc_gateway_connection_lookup_conn(conn);
 	gwconn = &silc_gwconn->gwconn;
 
+	silc_gwconn->connection_status = status;
 	switch(status) {
 		case SILC_CLIENT_CONN_SUCCESS:
 		case SILC_CLIENT_CONN_SUCCESS_RESUME:
-			silc_gwconn->connection_status = status;
-			gateway_connection_set_logged_in(gwconn);
+			if( silc_gwconn->connected == TRUE )
+				gateway_connection_set_logged_in(gwconn);
 			break;
-			
 		case SILC_CLIENT_CONN_ERROR:
 			i_silc_client_close_connection(silc_gwconn);
 			break;
@@ -276,9 +278,6 @@ void i_silc_operation_connected(SilcClient client, SilcClientConnection conn,
 			i_silc_client_close_connection(silc_gwconn);
 			break;
 		case SILC_CLIENT_CONN_ERROR_TIMEOUT:
-			i_silc_client_close_connection(silc_gwconn);
-			break;
-		default:
 			i_silc_client_close_connection(silc_gwconn);
 			break;
 	}
