@@ -1,4 +1,10 @@
-2005-07-10 13:35  Andrej Kacian <andrej@kacian.sk>
+2005-08-09 23:57  Andrej Kacian <andrej@kacian.sk>
+	* src: clientops.c, silc-channel-presence.[ch], clientops-notify.c
+	       silc-gateway-connection.[ch], silc.c: Only send
+	       gateway_logged_in event after we have logged in and acquired
+	       correct nickname.
+
+2005-09-05 13:35  Andrej Kacian <andrej@kacian.sk>
 	* src: silc-gateway.h, silc-client.c, silc-local-presence.c,
 	       silc-gateway-connection.c, silc-gateway.c: Some fixes to work
 	       with current irssi2
